# oai-release-agentRAN

./: .clang-format  .gitignore  CHANGELOG.md  CMakeLists.txt  RU_conf.xml  UL_control_termination.py  demo.conf  demo.sh  dl_metrics_forwarder.py  pf_dl_pipe_logger.lua  pf_dl_simple.lua  pf_ul_pinned_logger.lua  pf_ul_pipe_logger.lua  restart_core.sh  restart_oai.sh  telnet_utils.py  ul_metrics_forwarder.py  watchdog_core.sh
ci-scripts/: Jenkinsfile  Jenkinsfile-GitLab-Container  Jenkinsfile-push-registry  README.md  args_parse.py  attenuatorctl.py  ci_infra.yaml  cls_analysis.py  cls_ci_helper.py  cls_cluster.py  cls_cmd.py  cls_containerize.py  cls_corenetwork.py  cls_module.py  cls_native.py  cls_oai_html.py  cls_oaicitest.py  cls_static_code_analysis.py  datalog_rt_stats.100.2x2.yaml  datalog_rt_stats.1x1.60.yaml  datalog_rt_stats.2x2.yaml  datalog_rt_stats.60.2x2.yaml  datalog_rt_stats.default.yaml  helpreadme.py  main.py  ran.py  run_locally.sh  xml_class_list.yml
cmake_targets/: build_oai  cross-arm.cmake
common/: 5g_platform_types.h  openairinterface5g_limits.h  platform_constants.h  platform_types.h  ran_context.h
common/utils/LOG/: CMakeLists.txt  log.c  log.h
common/utils/LOG/DOC/: lttng_logs.md  rtusage.md
doc/: 5Gnas.md  Aerial_FAPI_Split_Tutorial.md  BUILD.md  CMakeLists.txt  Doxyfile  FEATURE_SET.md  GET_SOURCES.md  L1SIM.md  L2NFAPI.md  L2NFAPI_NOS1.md  L2NFAPI_S1.md  LDPC_OFFLOAD_SETUP.md  LDPC_XDMA_offload_setup.md  NR_NFAPI_archi.md  NR_SA_Tutorial_COTS_UE.md  NR_SA_Tutorial_OAI_CN5G.md  NR_SA_Tutorial_OAI_multi_UE.md  NR_SA_Tutorial_OAI_nrUE.md  ORAN_FHI7.2_Tutorial.md  README.md  RUNMODEM.md  RUN_NR_PRS.md  SW-archi-graph.md  SW_archi.md  TESTBenches.md  TESTING_OAI_NSA_COTS_UE.md  UL_MIMO.md  UnitTests.md  analog_beamforming.md  clang-format.md  code-style-contrib.md  cross-compile.md  d2d_emulator_setup.md  data_recording.md  doc_best_practices.md  environment-variables.md  handover-tutorial.md  iqrecordplayer_usage.md  nfapi.md  nr-ue-design.md  (+6 more)
docker/: Dockerfile.base.rhel9  Dockerfile.base.rocky  Dockerfile.base.ubuntu  Dockerfile.base.ubuntu.cross-arm64  Dockerfile.build.fhi72.native_arm.ubuntu  Dockerfile.build.fhi72.rhel9  Dockerfile.build.fhi72.ubuntu  Dockerfile.build.ubuntu  Dockerfile.build.ubuntu.cross-arm64  Dockerfile.eNB.rhel9  Dockerfile.eNB.rocky  Dockerfile.eNB.ubuntu  Dockerfile.gNB.aerial.ubuntu  Dockerfile.gNB.aerial.ubuntu.sanitize-address  Dockerfile.gNB.aw2s.rhel9  Dockerfile.gNB.aw2s.rocky  Dockerfile.gNB.aw2s.ubuntu  Dockerfile.gNB.fhi72.rhel9  Dockerfile.gNB.fhi72.rocky  Dockerfile.gNB.fhi72.ubuntu  Dockerfile.gNB.rhel9  Dockerfile.gNB.rocky  Dockerfile.gNB.ubuntu  Dockerfile.lteRU.rhel9  Dockerfile.lteRU.ubuntu  Dockerfile.lteUE.rhel9  Dockerfile.lteUE.rocky  Dockerfile.lteUE.ubuntu  Dockerfile.nr-cuup.rhel9  Dockerfile.nr-cuup.rocky  Dockerfile.nr-cuup.ubuntu  Dockerfile.nrORU.fhi72.ubuntu  Dockerfile.nrUE.rhel9  Dockerfile.nrUE.rocky  Dockerfile.nrUE.ubuntu  Dockerfile.phySim.rhel9  README.md  debug_core_image.sh
executables/: create_tasks.c  create_tasks_mbms.c  create_tasks_ue.c  lte-enb.c  lte-ru.c  lte-softmodem.c  lte-softmodem.h  lte-ue.c  lte-uesoftmodem.c  main_nr_ru.c  nr-gnb.c  (+15 more)
nfapi/: CMakeLists.txt
nfapi/oai_integration/: nfapi_pnf.c  nfapi_pnf.h  nfapi_vnf.c  nfapi_vnf.h
nfapi/oai_integration/aerial/: CMakeLists.txt  fapi_nvIPC.c  fapi_nvIPC.h  fapi_vnf_p7.c  fapi_vnf_p7.h
nfapi/oai_integration/socket/: CMakeLists.txt  socket_common.c  socket_pnf.c  socket_vnf.c
nfapi/oai_integration/socket/include/: socket_common.h  socket_pnf.h  socket_vnf.h
nfapi/oai_integration/wls_integration/: CMakeLists.txt  wls_common.c  wls_pnf.c  wls_vnf.c
nfapi/oai_integration/wls_integration/include/: wls_common.h  wls_pnf.h  wls_vnf.h
nfapi/open-nFAPI/common/src/: nfapi.c
nfapi/open-nFAPI/fapi/: CMakeLists.txt
nfapi/open-nFAPI/fapi/inc/: nr_fapi.h  nr_fapi_p5.h  nr_fapi_p5_utils.h  nr_fapi_p7.h  nr_fapi_p7_utils.h
nfapi/open-nFAPI/fapi/src/: nr_fapi.c  nr_fapi_p5.c  nr_fapi_p5_utils.c  nr_fapi_p7.c  nr_fapi_p7_utils.c
nfapi/open-nFAPI/nfapi/public_inc/: fapi_nr_ue_constants.h  fapi_nr_ue_interface.h  nfapi_interface.h  nfapi_nr_interface.h  nfapi_nr_interface_scf.h
nfapi/open-nFAPI/nfapi/src/: nfapi_p5.c  nfapi_p7.c
nfapi/open-nFAPI/pnf/inc/: pnf.h  pnf_p7.h
nfapi/open-nFAPI/pnf/public_inc/: nfapi_pnf_interface.h
nfapi/open-nFAPI/pnf/src/: pnf.c  pnf_interface.c  pnf_p7.c  pnf_p7_interface.c
nfapi/open-nFAPI/pnf/tests/: pnf_cunit_main.c
nfapi/open-nFAPI/utils/: nfapi_hex_parser.c
nfapi/open-nFAPI/vnf/inc/: vnf.h  vnf_p7.h
nfapi/open-nFAPI/vnf/public_inc/: nfapi_vnf_interface.h
nfapi/open-nFAPI/vnf/src/: vnf.c  vnf_interface.c  vnf_p7.c  vnf_p7_interface.c
nfapi/tests/p5/: nr_fapi_config_request_test.c  nr_fapi_config_response_test.c  nr_fapi_error_indication_test.c  nr_fapi_param_request_test.c  nr_fapi_param_response_test.c  nr_fapi_start_request_test.c  nr_fapi_start_response_test.c  nr_fapi_stop_indication_test.c  nr_fapi_stop_request_test.c
nfapi/tests/p7/: nr_fapi_crc_indication_test.c  nr_fapi_dl_tti_request_test.c  nr_fapi_rach_indication_test.c  nr_fapi_rx_data_indication_test.c  nr_fapi_slot_indication_test.c  nr_fapi_srs_indication_test.c  nr_fapi_tx_data_request_test.c  nr_fapi_uci_indication_test.c  nr_fapi_ul_dci_request_test.c  nr_fapi_ul_tti_request_test.c
openair1/PHY/CODING/nrLDPC_coding/nrLDPC_coding_aal/: CMakeLists.txt  README.md  nrLDPC_coding_aal.c  nrLDPC_coding_aal.h
openair2/F1AP/lib/: CMakeLists.txt  f1ap_interface_management.c  f1ap_lib_common.c  f1ap_lib_common.h  f1ap_lib_includes.h  f1ap_positioning.c  f1ap_positioning.h  f1ap_rrc_message_transfer.c  f1ap_ue_context.c  f1ap_ue_context.h
openair2/RRC/NR/tests/: CMakeLists.txt  rrc_bearers_test.c
openair3/NAS/TOOLS/: CMakeLists.txt  conf2uedata.c  conf_network.h  conf_usim.c  nvram.c  usim.c
radio/vrtsim/: CMakeLists.txt  README.md  noise_device.c  taps_client.cpp  taps_client.h  vrtsim.c
tests/nr-cuup/: CMakeLists.txt  README.md  load-test.conf  nr-cuup-functional-test.sh  nr-cuup-load-test.c
(+1055 files in other folders)
